jshint ignores 'test' and 'suite' globals

--- a/site-lisp/jshint-config.json
+++ b/site-lisp/jshint-config.json
@@ -19,7 +19,9 @@
     "predef"        : [  // Custom globals.
       "Modernizr",
       "describe",
-      "it"
+      "it",
+      "test",
+      "suite"
     ],
 
 
